--- a/RemoteWakeUp/RemoteWakeUp.csproj
+++ b/RemoteWakeUp/RemoteWakeUp.csproj
@@ -39,4 +39,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Build\appsettings.json" />
+    </ItemGroup>
+
 </Project>
