修复Swagger配置文件

--- a/RemoteWakeUp/appsettings.json
+++ b/RemoteWakeUp/appsettings.json
@@ -19,6 +19,7 @@
     "Audience": "[输入Audience，随便填]",
     "ExpireMinutes": 30
   },
+  "IsUseSwagger": true,
   "WakeUp": {
     "MacList": [
     ]
