加入Token鉴权功能

--- a/RemoteWakeUp/appsettings.json
+++ b/RemoteWakeUp/appsettings.json
@@ -21,8 +21,14 @@
   },
   "IsUseSwagger": true,
   "WakeUp": {
+    "Password": "",
     "SubnetBroadcastAddress": "255.255.255.255",
     "MacList": [
+      {
+        "Name": "台式机",
+        "IP": "192.168.2.3",
+        "MAC": "74:56:3C:7A:6F:70"
+      }
     ]
   }
 }
