加入vue作为前端框架

--- a/RemoteWakeUp/RemoteWakeUp.csproj
+++ b/RemoteWakeUp/RemoteWakeUp.csproj
@@ -38,6 +38,7 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <Content Include="ClientApp\.github\workflows\main.yml" />
     </ItemGroup>
 
     <ItemGroup>
