--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,6 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64,windows/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/${{ github.actor }}/remotewakeup:latest
