--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,21 +3,25 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - main  # 当向main分支推送时触发工作流
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 定义运行环境为最新版本的Ubuntu
+
+    permissions:
+      packages: write  # 授予写入GitHub Packages的权限
+      contents: read   # 授予读取仓库内容的权限
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v2  # 检出代码
 
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v1  # 设置QEMU，用于跨平台构建
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v1  # 设置Docker Buildx
 
     - name: Login to GitHub Packages
       uses: docker/login-action@v1 
@@ -25,12 +29,14 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+      # 登录到GitHub Packages，需要设置secrets.GITHUB_TOKEN
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64  # 定义构建平台
         push: true
-        tags: ghcr.io/${{ github.actor }}/remotewakeup:latest
+        tags: ghcr.io/${{ github.repository }}/remotewakeup:latest
+      # 构建并推送Docker镜像到GitHub Packages
