--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,49 +1,55 @@
-name: Build and Push Docker Image
+name: build docker image
 
 on:
   push:
     branches:
-      - main  # 当向main分支推送时触发工作流
+      - master
+  pull_request:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # 定义运行环境为最新版本的Ubuntu
-
+    runs-on: ubuntu-latest
     permissions:
-      packages: write  # 授予写入GitHub Packages的权限
-      contents: read   # 授予读取仓库内容的权限
-
+      packages: write
+      contents: read
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2  # 检出代码
+      - uses: actions/checkout@v3
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1  # 设置QEMU，用于跨平台构建
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm64
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1  # 设置Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Login to GitHub Packages
-      uses: docker/login-action@v1 
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-      # 登录到GitHub Packages，需要设置secrets.GITHUB_TOKEN
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    - name: Prepare
-      id: prepare
-      run: |
-        REPO_NAME=$(echo "cr-zhichen/RemoteWakeUp" | tr '[:upper:]' '[:lower:]')
-        IMAGE_TAG=ghcr.io/${REPO_NAME}/remotewakeup:latest
-        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+      - name: Prepare
+        id: prepare
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64  # 定义构建平台
-        push: true
-        tags: ${{ env.IMAGE_TAG }}
-      # 构建并推送Docker镜像到GitHub Packages
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          VERSION="${{ github.ref_name }}"
+          # Strip slash from tag name
+          [[ "${{ github.ref_type }}" == "branch" ]] && VERSION=$(echo $VERSION | sed 's/\//_/')
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref_type }}" == "tag" ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+
+          echo ::set-output name=image::$IMAGE_ID:$VERSION
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.prepare.outputs.image }}
+          platforms: linux/arm64,linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
