--- a/RemoteWakeUp/appsettings.json
+++ b/RemoteWakeUp/appsettings.json
@@ -24,7 +24,8 @@
     // 为空默认使用随机字符串
     "Audience": "",
     // "ExpireMinutes" 设置 JWT 令牌的有效期，单位为分钟。此值决定了令牌在多久后过期。
-    "ExpireMinutes": 30
+    // 为-1时永不过期
+    "ExpireMinutes": -1
   },
   "IsUseSwagger": true,
   "reCAPTCHA": {
