--- a/RemoteWakeUp/Properties/launchSettings.json
+++ b/RemoteWakeUp/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "WebSocketProject": {
+    "RemoteWakeUp": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
