--- a/RemoteWakeUp/RemoteWakeUp.csproj
+++ b/RemoteWakeUp/RemoteWakeUp.csproj
@@ -43,6 +43,75 @@
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Build\appsettings.json" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\el-button-67a6a197.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-0985936e.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-18873fc1.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-2420bbfa.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-36771d43.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-3e5ca290.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-67a6a197.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-6b54c7ab.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-bd253b43.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-c7255f0e.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\goToRouter-e8f8c4ba.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-03f0a0df.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-2da9116f.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-378b6271.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-4be45b91.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-50224027.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-69fdb635.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-d021ad10.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-e224432b.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-e5201ed4.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\HomePage-eaa788fb.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\httpRequest-1e2a487b.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-020d5045.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-15ee83b9.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-1ae2bf88.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-2e40e08f.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-2ee8d57b.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-3444ab5d.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-371a5e07.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-3927d1bb.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-3da38d03.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-40fa0f6c.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-52af9f05.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-5661194e.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-5acee89b.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-5d0dffdb.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-600bf995.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-79fd7528.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-7c434fae.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-7c5756fc.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-9f898ede.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-bc0f457f.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-e9b26471.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\index-efbebda6.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-31d8b2a7.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-3292fafa.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-39e1e3e7.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-3a26d2f3.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-429324b7.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-460ba3c1.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-6e411666.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-7d0ad0d3.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-95a333f3.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-a2228b33.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-abbe5092.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-b7498e09.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\LoginPage-fecb633f.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-3183012f.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-36651e48.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-4aeb6463.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-5360783f.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-88175db1.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-93eb04bf.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-9f4367e4.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-bfd31a4b.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\assets\NotFoundPage-fdb96da0.js" />
+      <_ContentIncludedByDefault Remove="wwwroot\index.html" />
+      <_ContentIncludedByDefault Remove="wwwroot\logo.svg" />
+      <_ContentIncludedByDefault Remove="wwwroot\vite.svg" />
     </ItemGroup>
 
 </Project>
